@@ -874,3 +874,4 @@ if [is_elf_format] {
     run_dump_test "localize-hidden-1"
 }
 run_dump_test "localize-hidden-2"
+run_dump_test "testranges"
