@@ -1,3 +1,8 @@
+2009-07-14  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* binutils-all/objcopy.exp (testranges): New test.
+	* binutils-all/testranges.d, binutils-all/testranges.s: New files.
+
 2009-06-25  Christopher Faylor  <me+cygwin@cgf.cx>
 
 	* binutils-all/objcopy.exp: Move XFAIL from objcopy_test to
